# embedded-systems-utils

./: CMakeLists.txt  README.md
include/esutils/: algorithms.hpp  bit_reference_wrapper.hpp  bit_slice_reference.hpp  bool_collection.hpp  ring_buffer.hpp  static_stack.hpp
src/: lookup_table.hpp  static_set.hpp  status_helper.hpp  tules_algorithms.h  tules_algorithms.hpp  tules_bool_collection.hpp  tules_commons.h  tules_commons.hpp  tules_lookup_table.hpp  tules_lookuptable.hpp  tules_optional.h  tules_optional.hpp  tules_ring_buffer.hpp  tules_ringbuffer.h  tules_ringbuffer.hpp  tules_static_set.hpp  tules_static_stack.hpp  tules_staticstack.hpp  tules_status_helper.hpp  tules_type_capacity.h  tules_type_capacity.hpp  type_capacity.hpp
tests/: CMakeLists.txt  test_bit_reference_wrapper.cpp  test_bit_slice_reference.cpp
